
//  Copyright 2015 Roy Ferguson
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.


syntax = "proto2";

package MetadataStoreInterface;

option java_package="anything.protocode";

message Criteria {
optional bytes minId = 1;
optional bytes maxId = 2;
optional string keyRegex = 3;
}

message Result {
optional bytes Id = 1; // unique 16 bytes
optional int64 Time = 2;
optional string Key = 3;
optional string Value = 4;
}

service MetadataStore {
rpc Query(Criteria) returns (stream Result);
}
